# PVS

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  API_USAGE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  PARAMETERS.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  feedback.py  index.html  mkdocs.yml  notes  package-lock.json  perlin.py  pyproject.toml  requirements.txt  requirements_docker.txt  ruff.toml  run.py  saved_values.txt  saved_values.yaml  saved_values2.yaml  sitemap.xml  tasks.txt  test.py  test1.py  test2.py  todo.txt
.claude/: settings.json
agent/: Dockerfile  README.md  agent.py  requirements.txt
api/: index.html
code-review/: index.html
docker/: index.html
docs/: api.md  build.md  docker.md  getting-started.md  index.md  parameters-reference.md  parameters.md  roadmap.md
documentation/: API_USAGE.md  PARAMETERS.md  diagram.drawio
examples/: README.md  obs_automation_example.py  recipes.py
getting-started/: index.html
ideas/: test.py  test2.py  test3.py  warp1.py
parameters/: index.html
parameters-reference/: index.html
roadmap/: index.html
save/: autosave.yaml  midi_mappings.yaml  saved_values.yaml  saved_values.yaml.bak
scripts/: __init__.py  write_patches.py
search/: search_index.json
tests/: conftest.py  test_animations.py  test_api.py  test_effects.py  test_lfo.py  test_midi_export.py  test_param_history.py  test_params.py  test_patch_morph.py
video_synth/: __main__.py  animations.py  api.py  audio_reactive.py  fx.py  (+58 more)
(+125 files in other folders)
